--- a/Storage/appsettings.json
+++ b/Storage/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Database=u0775942_StorageDB;Integrated Security=False;User ID=u0775942_db_usr;Password=Programmer123"
+    "DefaultConnection": "Data Source=localhost;Database=u0775942_StorageDB;Integrated Security=False;User ID=u0775942_db_usr;Password=Programmer123",
+    "DefaultConnection1": "Server=(localdb)\\mssqllocaldb;Database=StorageDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
